--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,11 +34,13 @@ body{
 
 header{
     margin-left: 250px;
+    box-shadow: 0 2px 10px;
     padding: 10px;
 }
 
-header h1{
-    margin: 0;
+header h2{
+    margin-top: 15px;
+    color: #2c3e50;
 }
 
 .main-content{
@@ -46,23 +48,11 @@ header h1{
     padding: 10px;
 }
 
-h1{
-    margin: 0;
-    color: #2c3e50;
-}
-
-.sidebar-footer{
-    position: fixed;
-    bottom: 0;
-    border-top: 1px solid black;
-    width: 250px;
-    padding: 10px;
-}
 
 a:hover{
     background-color: #34495e;
     border-radius: 5px;
-    width: 80%;
+    width: 95%;
 }
 
 label{
