--- a/public/css/home.css
+++ b/public/css/home.css
@@ -56,10 +56,14 @@ button[type="submit"]:hover{
     background-color: #34495e;
 }
 
-#transac-options, #category, #transac-date, #total-amount{
+input, select{
     width: 100%;
     border-radius: 5px;
     padding: 5px;
     outline: none;
     border: 1px solid #000;
+}
+
+input:hover, select:hover{
+    border: 1px solid #3498db;
 }
