--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,6 +4,53 @@
 .col-3{width: 75%;}
 .col-4{width: 100%;}
 
+p{
+    margin: 0;
+    text-align: center;
+}
+
+#amount-display{
+    font-size: 80px;
+}
+
+#summary-container{
+    display: grid;
+    padding: 10px;
+    grid-template-columns: 1fr;
+    height: 90%;
+}
+
+
+.summary-item-display{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+}
+
+.summary-item-display p{
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+#summary-container div{
+    height: 90%;
+    
+}
+
+#display-item-income{
+    background-color: #7bed9f;
+    color: #000;
+    border-radius: 10px;
+    font-weight: bolder;
+}
+
+#display-item-expense{
+    background-color: #ff6b81;
+    color: #000;
+    border-radius: 10px;
+    font-weight: bolder;
+}
+
 .content-block{
     display: grid;
     padding: 10px;
@@ -39,6 +86,10 @@
 
 .form-label{
     color: #34495e;
+}
+
+label{
+    color: #000;
 }
 
 button[type="submit"]{
