--- a/public/css/home.css
+++ b/public/css/home.css
@@ -13,6 +13,29 @@ p{
     font-size: 80px;
 }
 
+table{
+    margin-top: 20px;
+    width: 100%;
+    table-layout: fixed;
+}
+
+table tbody td{
+    background-color: #bdc3c7;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+table thead td{
+    padding: 5px;
+    border-radius: 5px;
+    color: white;
+    font-weight: bolder;
+}
+
+table thead{
+    background-color: #2c3e50;
+}
+
 #summary-container{
     display: grid;
     padding: 10px;
@@ -56,6 +79,22 @@ p{
     padding: 10px;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 5px;
+}
+
+.block{
+    padding: 10px;
+}
+
+.block-title{
+    background-color: #34495e;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.block-title h2{
+    color: white;
+    margin: 0;
+    padding: 0;
 }
 
 .content-item{
